src/objects/AccountContactRelation.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Only used for ETL loads, due to Informatica API Version 33.0 compatibility</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date_Relationships__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Will end date all active relationships on save.</description>
        <label>End Date Other Active Relationships</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Only used for ETL loads, due to Informatica API Version 33.0 compatibility</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MDM_ID__c</fullName>
        <label>MDM ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Relationship__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Primary Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Only used for ETL loads, due to Informatica API Version 33.0 compatibility</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>